# tsix-autoconnect

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  main.cpp  mingw-toolchain.cmake  tsix-workpackages.db
catalog/: CMakeLists.txt
catalog/files/: catalog_v1.json  catalog_v2.json
catalog/rc/: editabletreemodel.qrc
catalog/src/: mainwindow.cpp  treemodel.cpp
cmake/: deliver-mingw.cmake  deliver.cmake  macros.cmake
files/: catalog.bat
locker/: CMakeLists.txt  DbLocker.cpp  DbLocker.h  SignalHandler.cpp  SignalHandler.h  main.cpp
